--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,126 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HEYY!!!
-</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title align:center>Our Menu</title>
+<style>
+/********** Base styles **********/
+* {
+  box-sizing: border-box;
+}
+h1 {
+  margin-bottom: 15px;
+}
+section {
+  top: 20px;
+  border: 1px solid black;
+
+  margin-bottom:10px;
+  margin-bottom:10px;
+  margin-right: 10px;
+  margin-left: 10px;
+  background-color: grey;
+  width: 99%;
+  height: 200px;
+  overflow: auto;
+  font-family: Helvetica;
+  color: white;
+}
+/* Simple Responsive Framework. */
+.row {
+  width: 100%;
+}
+/********** Large devices only **********/
+@media (min-width: 992px) {
+  .col-lg-3{
+    float: left;
+    border: 1px ;
+  }
+ 
+  .col-lg-3 {
+    width: 33.33%;
+  }
+
+}
+/********** Medium devices only **********/
+@media (min-width: 767px) and (max-width: 991px) {
+  .col-md-1, .col-md-2, .col-md-3 {
+    float: left;
+      }
+  .col-md-2 {
+    width: 50%;
+  }
+  .col-md-1 {
+    width: 100%;
+
+  }
+  }
+.boxed {
+float: right;
+right:0px;
+top:0px;
+clear:both;
+border: 1px solid black;
+   background-color: blue;
+  width: 80px;
+  height: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: Helvetica;
+  color: white;
+}
+.boxedr {
+float: right;
+right:0px;
+top:0px;
+clear:both;
+border: 1px solid black;
+   background-color: red;
+  width: 80px;
+  height: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: Helvetica;
+  color: white;
+}
+.boxedg {
+float: right;
+right:0px;
+top:0px;
+clear:both;
+border: 1px solid black;
+   background-color: green;
+  width: 80px;
+  height: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: Helvetica;
+  color: white;
+}
+
+
+  
+}
+</style>
 </head>
 <body>
-<h1>heyyaa hola</h1>
+<h1 align="center">Our Menu</h1>
+
+<div class="row">
+  <div class="col-lg-3 col-md-2 ">
+<section><span class="boxed" "bluec" align= center>
+  Sushi</span><p>Section title region: Each section should have a section title region that is always positioned at the top right corner of the section no matter the view (desktop, tablet or mobile). Copy the titles from the mockup illustration (i.e., Chicken, Beef, Sushi) or come up with your own. (Hint: use relative and absolute positioning and offsets as discussed in Lecture 22.)
+</p></section>
+  </div>
+  <div class="col-lg-3 col-md-2 "><section><span class="boxedg" align= center>
+  Chicken</span><p>Section title region: Each section should have a section title region that is always positioned at the top right corner of the section no matter the view (desktop, tablet or mobile). Copy the titles from the mockup illustration (i.e., Chicken, Beef, Sushi) or come up with your own. (Hint: use relative and absolute positioning and offsets as discussed in Lecture 22.)
+ 2</p></section></div>
+  <div class="col-lg-3 col-md-1 "><section><span class="boxedr" align= center>
+  Beef</span><p>Section title region: Each section should have a section title region that is always positioned at the top right corner of the section no matter the view (desktop, tablet or mobile). Copy the titles from the mockup illustration (i.e., Chicken, Beef, Sushi) or come up with your own. (Hint: use relative and absolute positioning and offsets as discussed in Lecture 22.)
+ 2</p></section></div>
+ 
+</div>
+
 </body>
 </html>
