--- a/site/index.html
+++ b/site/index.html
@@ -1,126 +1,60 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title align:center>Our Menu</title>
-<style>
-/********** Base styles **********/
-* {
-  box-sizing: border-box;
-}
-h1 {
-  margin-bottom: 15px;
-}
-section {
-  top: 20px;
-  border: 1px solid black;
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  margin-bottom:10px;
-  margin-bottom:10px;
-  margin-right: 10px;
-  margin-left: 10px;
-  background-color: grey;
-  width: 90%;
-  height: 200px;
-  overflow: auto;
-  font-family: Helvetica;
-  color: white;
-}
-/* Simple Responsive Framework. */
-.row {
-  width: 100%;
-}
-/********** Large devices only **********/
-@media (min-width: 992px) {
-  .col-lg-3{
-    float: left;
-    border: 1px ;
-  }
- 
-  .col-lg-3 {
-    width: 33.33%;
-  }
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-}
-/********** Medium devices only **********/
-@media (min-width: 767px) and (max-width: 991px) {
-  .col-md-1, .col-md-2, .col-md-3 {
-    float: left;
-      }
-  .col-md-2 {
-    width: 50%;
-  }
-  .col-md-1 {
-    width: 100%;
+    <title>Coursera-test by sahithi267</title>
+  </head>
 
-  }
-  }
-.boxed {
-float: right;
-right:0px;
-top:0px;
-clear:both;
-border: 1px solid black;
-   background-color: blue;
-  width: 80px;
-  height: 20px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
-}
-.boxedr {
-float: right;
-right:0px;
-top:0px;
-clear:both;
-border: 1px solid black;
-   background-color: red;
-  width: 80px;
-  height: 20px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
-}
-.boxedg {
-float: right;
-right:0px;
-top:0px;
-clear:both;
-border: 1px solid black;
-   background-color: green;
-  width: 80px;
-  height: 20px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
-}
+  <body>
 
+    <header>
+      <div class="container">
+        <h1>Coursera-test</h1>
+        <h2>coursera-test repositary</h2>
 
-  
-}
-</style>
-</head>
-<body>
-<h1 align="center">Our Menu</h1>
+        <section id="downloads">
+          <a href="https://github.com/sahithi267/coursera-test/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/sahithi267/coursera-test/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/sahithi267/coursera-test" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-<div class="row">
-  <div class="col-lg-3 col-md-2 ">
-<section><span class="boxed" "bluec" align= center>
-  Sushi</span><p>Section title region: Each section should have a section title region that is always positioned at the top right corner of the section no matter the view (desktop, tablet or mobile). Copy the titles from the mockup illustration (i.e., Chicken, Beef, Sushi) or come up with your own. (Hint: use relative and absolute positioning and offsets as discussed in Lecture 22.)
-</p></section>
-  </div>
-  <div class="col-lg-3 col-md-2 "><section><span class="boxedg" align= center>
-  Chicken</span><p>Section title region: Each section should have a section title region that is always positioned at the top right corner of the section no matter the view (desktop, tablet or mobile). Copy the titles from the mockup illustration (i.e., Chicken, Beef, Sushi) or come up with your own. (Hint: use relative and absolute positioning and offsets as discussed in Lecture 22.)
- 2</p></section></div>
-  <div class="col-lg-3 col-md-1 "><section><span class="boxedr" align= center>
-  Beef</span><p>Section title region: Each section should have a section title region that is always positioned at the top right corner of the section no matter the view (desktop, tablet or mobile). Copy the titles from the mockup illustration (i.e., Chicken, Beef, Sushi) or come up with your own. (Hint: use relative and absolute positioning and offsets as discussed in Lecture 22.)
- 2</p></section></div>
- 
-</div>
+    <div class="container">
+      <section id="main_content">
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-</body>
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+      </section>
+    </div>
+
+    
+  </body>
 </html>
