--- a/module 4/index.html
+++ b/module 4/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
   <h1>Sahithi's Module 4 Solution Starter</h1>
-  <h2> ----> Console</h2>
+  <h2> check Console</h2>
 </body>
 </html>
